# PPE-Classification

./: .gitignore  LICENSE  README.md  app.py  class_names.txt  dataset.yaml  fish_classifier.py  fish_counter.py  fish_counts.csv  pyproject.toml  requirements.txt  run_app.py  streamlit_app.py  streamlit_metrics.py  train_config.yaml  train_model.py
config/: dataset.yaml
models/: class_names.txt
src/ppe_classification/: __init__.py  main.py
src/ppe_classification/models/: __init__.py  fish_classifier.py
src/ppe_classification/ui/: __init__.py  app.py
src/ppe_classification/utils/: __init__.py  fish_counter.py  metrics.py
